--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<!-- <!DOCTYPE html> <html lang="id"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Toko Jasa Unlock IMEI</title> <style> body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background: #f8f9fa; color: #333; } header { background: #007bff; color: white; padding: 20px; } h1 { margin: 0; } .container { padding: 40px 20px; } .btn-wa { display: inline-block; background: #25D366; color: white; padding: 15px 25px; border-radius: 5px; font-size: 18px; text-decoration: none; } .btn-wa:hover { background: #1ebe5b; } footer { margin-top: 40px; padding: 15px; background: #eee; } </style> </head> <body> <header> <h1>Selamat Datang di Unlock IMEI Nfl87</h1> <p>Jasa Unlock IMEI cepat & terpercaya</p> </header> <div class="container"> <h2>Pesan Sekarang</h2> <p>Klik tombol di bawah untuk chat langsung via WhatsApp.</p> <!-- Ganti nomor 6285245907854 dengan nomor WhatsApp kamu --> <a class="btn-wa" href="https://wa.me/6285245907854?text=Halo%20admin,%20saya%20mau%20tanya%20soal%20jasa%20unlock%20IMEI" target="_blank">Pesan via WhatsApp</a> </div> <footer> <p>© 2025 Unlock IMEI by Nfl87</p> </footer> </body> </html> -->
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Toko Jasa Unlock IMEI</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      background: #f8f9fa;
+      color: #333;
+    }
+    header {
+      background: #007bff;
+      color: white;
+      padding: 30px 20px;
+    }
+    h1 { margin: 0; }
+    .container {
+      padding: 40px 20px;
+    }
+    .btn-wa {
+      display: inline-block;
+      background: #25D366;
+      color: white;
+      padding: 15px 25px;
+      border-radius: 5px;
+      font-size: 18px;
+      text-decoration: none;
+    }
+    .btn-wa:hover {
+      background: #1ebe5b;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 15px;
+      background: #eee;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Selamat Datang di Toko Unlock IMEI</h1>
+    <p>Jasa Unlock IMEI cepat & terpercaya</p>
+  </header>
+
+  <div class="container">
+    <h2>Pesan Sekarang</h2>
+    <p>Klik tombol di bawah untuk chat langsung via WhatsApp.</p>
+    <!-- Ganti 6281234567890 dengan nomor kamu -->
+    <a class="btn-wa" 
+       href="https://wa.me/6281234567890?text=Halo%20admin,%20saya%20mau%20tanya%20soal%20jasa%20unlock%20IMEI" 
+       target="_blank">
+       Pesan via WhatsApp
+    </a>
+  </div>
+
+  <footer>
+    <p>© 2025 Toko Unlock IMEI</p>
+  </footer>
+</body>
+</html>
