--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
 </head>
 <body>
   <header>
-    <h1>Selamat Datang di Toko Unlock IMEI</h1>
+    <h1>Selamat Datang di Unlock IMEI Nfl87</h1>
     <p>Jasa Unlock IMEI cepat & terpercaya</p>
   </header>
 
   <div class="container">
     <h2>Pesan Sekarang</h2>
     <p>Klik tombol di bawah untuk chat langsung via WhatsApp.</p>
-    <!-- Ganti 6281234567890 dengan nomor kamu -->
+    <!-- Ganti 6285245907854 dengan nomor kamu -->
     <a class="btn-wa" 
-       href="https://wa.me/6281234567890?text=Halo%20admin,%20saya%20mau%20tanya%20soal%20jasa%20unlock%20IMEI" 
+       href="https://wa.me/6285245907854?text=Halo%20admin,%20saya%20mau%20tanya%20soal%20jasa%20unlock%20IMEI" 
        target="_blank">
        Pesan via WhatsApp
     </a>
   </div>
 
   <footer>
-    <p>© 2025 Toko Unlock IMEI</p>
+    <p>© 2025 Unlock IMEI Nfl87</p>
   </footer>
 </body>
 </html>
