--- a/index.html
+++ b/index.html
@@ -7,59 +7,44 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
+      background: #f5f5f5;
       text-align: center;
-      background: #f8f9fa;
+      padding: 50px;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+    h1 {
       color: #333;
     }
-    header {
-      background: #007bff;
-      color: white;
-      padding: 30px 20px;
+    p {
+      color: #555;
     }
-    h1 { margin: 0; }
-    .container {
-      padding: 40px 20px;
-    }
-    .btn-wa {
-      display: inline-block;
+    .wa-btn {
       background: #25D366;
       color: white;
       padding: 15px 25px;
       border-radius: 5px;
-      font-size: 18px;
       text-decoration: none;
+      font-size: 18px;
+      display: inline-block;
+      margin-top: 20px;
     }
-    .btn-wa:hover {
+    .wa-btn:hover {
       background: #1ebe5b;
-    }
-    footer {
-      margin-top: 40px;
-      padding: 15px;
-      background: #eee;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Selamat Datang di Unlock IMEI Nfl87</h1>
-    <p>Jasa Unlock IMEI cepat & terpercaya</p>
-  </header>
-
-  <div class="container">
-    <h2>Pesan Sekarang</h2>
-    <p>Klik tombol di bawah untuk chat langsung via WhatsApp.</p>
-    <!-- Ganti 6285245907854 dengan nomor kamu -->
-    <a class="btn-wa" 
-       href="https://wa.me/6285245907854?text=Halo%20admin,%20saya%20mau%20tanya%20soal%20jasa%20unlock%20IMEI" 
-       target="_blank">
-       Pesan via WhatsApp
-    </a>
+  <div class="card">
+    <h1>Jasa Unlock IMEI</h1>
+    <p>Kami melayani jasa unlock IMEI semua jenis HP dengan cepat dan aman.</p>
+    <p>Hubungi kami via WhatsApp untuk pemesanan:</p>
+    <a class="wa-btn" href="https://wa.me/6281234567890" target="_blank">💬 Chat via WhatsApp</a>
   </div>
-
-  <footer>
-    <p>© 2025 Unlock IMEI Nfl87</p>
-  </footer>
 </body>
 </html>
