--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toko Jasa Unlock IMEI</title>
+  <title>Jasa Unlock IMEI Nfl87</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -42,9 +42,9 @@
 <body>
   <div class="card">
     <h1>Jasa Unlock IMEI</h1>
-    <p>Kami melayani jasa unlock IMEI semua jenis HP dengan cepat dan aman.</p>
+    <p>Kami melayani jasa unlock IMEI cepat dan aman.</p>
     <p>Hubungi kami via WhatsApp untuk pemesanan:</p>
-    <a class="wa-btn" href="https://wa.me/6281234567890" target="_blank">💬 Chat via WhatsApp</a>
+    <a class="wa-btn" href="https://wa.me/6285245907854" target="_blank">💬 Chat via WhatsApp</a>
   </div>
 </body>
 </html>
