--- a/index.html
+++ b/index.html
@@ -3,48 +3,97 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jasa Unlock IMEI Nfl87</title>
+  <title>Jasa Unlock IMEI</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 0;
       text-align: center;
-      padding: 50px;
+    }
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 20px;
+    }
+    header h1 {
+      margin: 0;
+    }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 30px auto;
+      gap: 20px;
     }
     .card {
       background: white;
+      width: 280px;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      display: inline-block;
+      text-align: center;
     }
-    h1 {
-      color: #333;
+    .card h2 {
+      color: #2c3e50;
     }
-    p {
+    .price {
+      font-size: 24px;
+      color: #27ae60;
+      margin: 10px 0;
+    }
+    .desc {
       color: #555;
+      margin: 10px 0 20px;
     }
     .wa-btn {
       background: #25D366;
       color: white;
-      padding: 15px 25px;
+      padding: 12px 20px;
       border-radius: 5px;
       text-decoration: none;
-      font-size: 18px;
+      font-size: 16px;
       display: inline-block;
-      margin-top: 20px;
     }
     .wa-btn:hover {
       background: #1ebe5b;
     }
+    footer {
+      margin-top: 40px;
+      padding: 15px;
+      background: #2c3e50;
+      color: white;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
-  <div class="card">
+  <header>
     <h1>Jasa Unlock IMEI</h1>
-    <p>Kami melayani jasa unlock IMEI cepat dan aman.</p>
-    <p>Hubungi kami via WhatsApp untuk pemesanan:</p>
-    <a class="wa-btn" href="https://wa.me/6285245907854" target="_blank">💬 Chat via WhatsApp</a>
+    <p>Solusi cepat & aman untuk IPhone Ex Inter</p>
+  </header>
+
+  <div class="container">
+    <!-- Paket Standard -->
+    <div class="card">
+      <h2>Paket Standard</h2>
+      <p class="price">Rp 350.000</p>
+      <p class="desc">Proses 2-3 hari kerja. Cocok untuk pengguna yang tidak terburu-buru.</p>
+      <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Paket+Standard+Unlock+IMEI" target="_blank">Pesan via WhatsApp</a>
+    </div>
+
+    <!-- Paket Express -->
+    <div class="card">
+      <h2>Paket Express</h2>
+      <p class="price">Rp 400.000</p>
+      <p class="desc">Proses 1 hari kerja. Prioritas lebih cepat untuk kebutuhan mendesak.</p>
+      <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Paket+Express+Unlock+IMEI" target="_blank">Pesan via WhatsApp</a>
+    </div>
   </div>
+
+  <footer>
+    &copy; 2025 Unlock IMEI Nfl87 - All Rights Reserved
+  </footer>
 </body>
 </html>
