--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f9;
+      background: linear-gradient(135deg, #a8edea, #fed6e3); /* gradasi segar */
       margin: 0;
       padding: 0;
       text-align: center;
     }
     header {
-      background: #2c3e50;
+      background: rgba(44, 62, 80, 0.9);
       color: white;
-      padding: 20px;
+      padding: 25px;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
     header h1 {
       margin: 0;
@@ -24,16 +27,20 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      margin: 30px auto;
+      margin: 40px auto;
       gap: 20px;
     }
     .card {
       background: white;
       width: 280px;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-radius: 15px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
       text-align: center;
+      transition: transform 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
     }
     .card h2 {
       color: #2c3e50;
@@ -51,27 +58,30 @@
       background: #25D366;
       color: white;
       padding: 12px 20px;
-      border-radius: 5px;
+      border-radius: 8px;
       text-decoration: none;
       font-size: 16px;
       display: inline-block;
+      transition: background 0.2s;
     }
     .wa-btn:hover {
       background: #1ebe5b;
     }
     footer {
-      margin-top: 40px;
-      padding: 15px;
-      background: #2c3e50;
+      margin-top: 50px;
+      padding: 20px;
+      background: rgba(44, 62, 80, 0.9);
       color: white;
       font-size: 14px;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Jasa Unlock IMEI</h1>
-    <p>Solusi cepat & aman untuk IPhone Ex Inter</p>
+    <h1>🌸 Jasa Unlock IMEI 🌸</h1>
+    <p>Solusi cepat & aman untuk iPhone Ex Inter</p>
   </header>
 
   <div class="container">
@@ -97,3 +107,4 @@
   </footer>
 </body>
 </html>
+
