--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #a8edea, #fed6e3); /* gradasi segar */
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* gradasi biru-hitam */
       margin: 0;
       padding: 0;
       text-align: center;
+      color: #fff;
     }
     header {
-      background: rgba(44, 62, 80, 0.9);
-      color: white;
+      background: rgba(0, 0, 0, 0.85);
+      color: #1e90ff;
       padding: 25px;
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
     }
     header h1 {
       margin: 0;
+      font-size: 26px;
     }
     .container {
       display: flex;
@@ -31,27 +33,28 @@
       gap: 20px;
     }
     .card {
-      background: white;
+      background: #1c1c1c;
       width: 280px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.6);
       text-align: center;
-      transition: transform 0.2s;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
     .card:hover {
       transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.8);
     }
     .card h2 {
-      color: #2c3e50;
+      color: #1e90ff;
     }
     .price {
       font-size: 24px;
-      color: #27ae60;
+      color: #00ffcc;
       margin: 10px 0;
     }
     .desc {
-      color: #555;
+      color: #ccc;
       margin: 10px 0 20px;
     }
     .wa-btn {
@@ -70,8 +73,8 @@
     footer {
       margin-top: 50px;
       padding: 20px;
-      background: rgba(44, 62, 80, 0.9);
-      color: white;
+      background: rgba(0, 0, 0, 0.9);
+      color: #aaa;
       font-size: 14px;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
@@ -80,7 +83,7 @@
 </head>
 <body>
   <header>
-    <h1>🌸 Jasa Unlock IMEI 🌸</h1>
+    <h1>📱 Jasa Unlock IMEI 📱</h1>
     <p>Solusi cepat & aman untuk iPhone Ex Inter</p>
   </header>
 
