--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #000000, #1a1a2e, #ffffff); /* hitam - biru - putih */
+      background: #0d1b2a; /* biru tua polos */
       margin: 0;
       padding: 0;
       text-align: center;
       color: #fff;
     }
     header {
-      background: rgba(0, 0, 0, 0.85);
-      color: #1e90ff;
+      background: #000000; /* hitam pekat */
+      color: #1e90ff; /* biru cerah */
       padding: 25px;
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.6);
     }
     header h1 {
       margin: 0;
@@ -33,18 +33,18 @@
       gap: 20px;
     }
     .card {
-      background: #ffffff;
+      background: #d9d9d9; /* abu-abu muda */
       width: 280px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
       text-align: center;
       transition: transform 0.2s, box-shadow 0.2s;
-      color: #000;
+      color: #000; /* teks di card hitam */
     }
     .card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.35);
     }
     .card h2 {
       color: #1e90ff;
@@ -75,7 +75,7 @@
     footer {
       margin-top: 50px;
       padding: 20px;
-      background: rgba(0, 0, 0, 0.9);
+      background: #000000;
       color: #aaa;
       font-size: 14px;
       border-top-left-radius: 20px;
