--- a/index.html
+++ b/index.html
@@ -7,23 +7,16 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #0d1b2a; /* biru tua polos */
+      background: #16213e; /* biru navy */
       margin: 0;
       padding: 0;
       text-align: center;
       color: #fff;
     }
     header {
-      background: #000000; /* hitam pekat */
-      color: #1e90ff; /* biru cerah */
+      background: #0f0f0f;
+      color: #1e90ff;
       padding: 25px;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.6);
-    }
-    header h1 {
-      margin: 0;
-      font-size: 26px;
     }
     .container {
       display: flex;
@@ -33,82 +26,38 @@
       gap: 20px;
     }
     .card {
-      background: #d9d9d9; /* abu-abu muda */
+      background: #3a3a3a; /* abu-abu gelap */
       width: 280px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.3);
       text-align: center;
-      transition: transform 0.2s, box-shadow 0.2s;
-      color: #000; /* teks di card hitam */
+      color: #fff;
     }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.35);
-    }
-    .card h2 {
-      color: #1e90ff;
-    }
-    .price {
-      font-size: 24px;
-      color: #000000;
-      margin: 10px 0;
-      font-weight: bold;
-    }
-    .desc {
-      color: #333;
-      margin: 10px 0 20px;
-    }
+    .card h2 { color: #1e90ff; }
+    .price { font-size: 24px; font-weight: bold; color: #fff; }
     .wa-btn {
-      background: #25D366;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: 16px;
-      display: inline-block;
-      transition: background 0.2s;
-    }
-    .wa-btn:hover {
-      background: #1ebe5b;
-    }
-    footer {
-      margin-top: 50px;
-      padding: 20px;
-      background: #000000;
-      color: #aaa;
-      font-size: 14px;
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
+      background: #25D366; color: white; padding: 12px 20px;
+      border-radius: 8px; text-decoration: none;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>📱Jasa Unlock IMEI Nfl87📱</h1>
+    <h1>📱 Jasa Unlock IMEI 📱</h1>
     <p>Solusi cepat & aman untuk iPhone Ex Inter</p>
   </header>
-
   <div class="container">
-    <!-- Paket Standard -->
     <div class="card">
       <h2>Paket Standard</h2>
       <p class="price">Rp 350.000</p>
-      <p class="desc">Proses 2-3 hari kerja. Cocok untuk pengguna yang tidak terburu-buru.</p>
-      <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Paket+Standard+Unlock+IMEI" target="_blank">Pesan via WhatsApp</a>
+      <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Standard" target="_blank">Pesan via WhatsApp</a>
     </div>
-
-    <!-- Paket Express -->
     <div class="card">
       <h2>Paket Express</h2>
       <p class="price">Rp 400.000</p>
-      <p class="desc">Proses 1 hari kerja. Prioritas lebih cepat untuk kebutuhan mendesak.</p>
-      <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Paket+Express+Unlock+IMEI" target="_blank">Pesan via WhatsApp</a>
+      <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Express" target="_blank">Pesan via WhatsApp</a>
     </div>
   </div>
-
-  <footer>
-    &copy; 2025 Unlock IMEI Nfl87 - All Rights Reserved
-  </footer>
 </body>
 </html>
