--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #16213e; /* biru navy */
+      background: #000000; /* hitam pekat */
       margin: 0;
       padding: 0;
       text-align: center;
       color: #fff;
     }
     header {
-      background: #0f0f0f;
+      background: #111;
       color: #1e90ff;
       padding: 25px;
     }
@@ -26,16 +26,16 @@
       gap: 20px;
     }
     .card {
-      background: #3a3a3a; /* abu-abu gelap */
+      background: #d9d9d9; /* abu-abu muda */
       width: 280px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.3);
+      box-shadow: 0 6px 12px rgba(255,255,255,0.1);
       text-align: center;
-      color: #fff;
+      color: #000;
     }
     .card h2 { color: #1e90ff; }
-    .price { font-size: 24px; font-weight: bold; color: #fff; }
+    .price { font-size: 24px; font-weight: bold; }
     .wa-btn {
       background: #25D366; color: white; padding: 12px 20px;
       border-radius: 8px; text-decoration: none;
@@ -61,3 +61,4 @@
   </div>
 </body>
 </html>
+
