--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #000000; /* hitam pekat */
+      background: #0d1b2a; /* biru tua */
       margin: 0;
       padding: 0;
       text-align: center;
       color: #fff;
     }
     header {
-      background: #111;
+      background: #000000;
       color: #1e90ff;
       padding: 25px;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
     }
     .container {
       display: flex;
@@ -30,7 +32,7 @@
       width: 280px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 6px 12px rgba(255,255,255,0.1);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
       text-align: center;
       color: #000;
     }
