--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #0d1b2a; /* biru tua */
+      background: #000000; /* hitam pekat */
       margin: 0;
       padding: 0;
       text-align: center;
       color: #fff;
     }
     header {
-      background: #000000;
+      background: #111;
       color: #1e90ff;
       padding: 25px;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.6);
+    }
+    header h1 {
+      margin: 0;
     }
     .container {
       display: flex;
@@ -32,15 +34,42 @@
       width: 280px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+      box-shadow: 0 6px 12px rgba(255,255,255,0.1);
       text-align: center;
       color: #000;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
-    .card h2 { color: #1e90ff; }
-    .price { font-size: 24px; font-weight: bold; }
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 24px rgba(255,255,255,0.2);
+    }
+    .card h2 {
+      color: #1e90ff;
+    }
+    .price {
+      font-size: 24px;
+      font-weight: bold;
+    }
     .wa-btn {
-      background: #25D366; color: white; padding: 12px 20px;
-      border-radius: 8px; text-decoration: none;
+      background: #25D366;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      transition: all 0.3s ease;
+    }
+    .wa-btn:hover {
+      background: #1ebe5b;
+      box-shadow: 0 0 12px rgba(37, 211, 102, 0.8);
+    }
+    footer {
+      margin-top: 40px;
+      padding: 15px;
+      background: #111;
+      color: #aaa;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -49,17 +78,28 @@
     <h1>📱 Jasa Unlock IMEI 📱</h1>
     <p>Solusi cepat & aman untuk iPhone Ex Inter</p>
   </header>
+
   <div class="container">
+    <!-- Paket Standard -->
     <div class="card">
       <h2>Paket Standard</h2>
       <p class="price">Rp 350.000</p>
-      <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Standard" target="_blank">Pesan via WhatsApp</a>
+      <p>Proses 2-3 hari kerja. Cocok untuk pengguna yang tidak terburu-buru.</p>
+      <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Paket+Standard" target="_blank">Pesan via WhatsApp</a>
     </div>
+
+    <!-- Paket Express -->
     <div class="card">
       <h2>Paket Express</h2>
       <p class="price">Rp 400.000</p>
-      <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Express" target="_blank">Pesan via WhatsApp</a>
+      <p>Proses 1 hari kerja. Prioritas lebih cepat untuk kebutuhan mendesak.</p>
+      <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Paket+Express" target="_blank">Pesan via WhatsApp</a>
     </div>
   </div>
+
+  <footer>
+    &copy; 2025 Unlock IMEI Nfl87 - All Rights Reserved
+  </footer>
 </body>
 </html>
+
