--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
       padding: 25px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.6);
     }
-    header h1 {
-      margin: 0;
-    }
+    header h1 { margin: 0; }
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -43,13 +41,8 @@
       transform: translateY(-8px);
       box-shadow: 0 12px 24px rgba(255,255,255,0.2);
     }
-    .card h2 {
-      color: #1e90ff;
-    }
-    .price {
-      font-size: 24px;
-      font-weight: bold;
-    }
+    .card h2 { color: #1e90ff; }
+    .price { font-size: 24px; font-weight: bold; }
     .wa-btn {
       background: #25D366;
       color: white;
@@ -66,7 +59,7 @@
     }
     footer {
       margin-top: 40px;
-      padding: 15px;
+      padding: 20px;
       background: #111;
       color: #aaa;
       font-size: 14px;
@@ -98,7 +91,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Unlock IMEI Nfl87 - All Rights Reserved
+    © 2025 Unlock IMEI Nfl87 | All Rights Reserved
   </footer>
 </body>
 </html>
