--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #000000; /* hitam pekat */
       margin: 0;
       padding: 0;
       text-align: center;
-      color: #fff;
+      background: #f5f5dc; /* cream lembut */
+      color: #333;
     }
     header {
-      background: #111;
-      color: #1e90ff;
+      background: #1e3d59; /* biru tua */
+      color: #fff;
       padding: 25px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.6);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
     header h1 { margin: 0; }
     .container {
@@ -28,21 +28,21 @@
       gap: 20px;
     }
     .card {
-      background: #d9d9d9; /* abu-abu muda */
+      background: #ffffff; /* putih bersih */
       width: 280px;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 6px 12px rgba(255,255,255,0.1);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
       text-align: center;
       color: #000;
       transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
     .card:hover {
       transform: translateY(-8px);
-      box-shadow: 0 12px 24px rgba(255,255,255,0.2);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
     }
-    .card h2 { color: #1e90ff; }
-    .price { font-size: 24px; font-weight: bold; }
+    .card h2 { color: #1e3d59; }
+    .price { font-size: 24px; font-weight: bold; color: #27ae60; }
     .wa-btn {
       background: #25D366;
       color: white;
@@ -60,8 +60,8 @@
     footer {
       margin-top: 40px;
       padding: 20px;
-      background: #111;
-      color: #aaa;
+      background: #1e3d59; /* biru tua sama dengan header */
+      color: #fff;
       font-size: 14px;
     }
   </style>
