--- a/index.html
+++ b/index.html
@@ -1,23 +1,97 @@
-<header>
-  <h1>📱 Jasa Unlock IMEI 📱</h1>
-  <p>Solusi cepat & aman untuk iPhone Ex Inter</p>
-</header>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unlock IMEI Nfl87</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      background: #f5f5dc; /* cream lembut */
+      color: #333;
+    }
+    header {
+      background: #1e3d59; /* biru tua */
+      color: #fff;
+      padding: 25px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    header h1 { margin: 0; }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 40px auto;
+      gap: 20px;
+    }
+    .card {
+      background: #ffffff; /* putih bersih */
+      width: 280px;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+      text-align: center;
+      color: #000;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+    }
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
+    }
+    .card h2 { color: #1e3d59; }
+    .price { font-size: 24px; font-weight: bold; color: #27ae60; }
+    .wa-btn {
+      background: #25D366;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      transition: all 0.3s ease;
+    }
+    .wa-btn:hover {
+      background: #1ebe5b;
+      box-shadow: 0 0 12px rgba(37, 211, 102, 0.8);
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background: #1e3d59; /* biru tua sama dengan header */
+      color: #fff;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>📱 Jasa Unlock IMEI 📱</h1>
+    <p>Solusi cepat & aman untuk iPhone Ex Inter</p>
+  </header>
 
-<style>
-  body {
-    background: #f5f5dc; /* cream lembut */
-    color: #333;
-  }
-  header {
-    background: #2f2f2f; /* abu gelap */
-    color: #fff;
-    padding: 25px;
-  }
-  footer {
-    background: #3a3a3a; /* abu tua */
-    color: #fff;
-    padding: 20px;
-    font-size: 14px;
-  }
-</style>
+  <div class="container">
+    <!-- Paket Standard -->
+    <div class="card">
+      <h2>Paket Standard</h2>
+      <p class="price">Rp 350.000</p>
+      <p>Proses 2-3 hari kerja. Cocok untuk pengguna yang tidak terburu-buru.</p>
+      <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Paket+Standard" target="_blank">Pesan via WhatsApp</a>
+    </div>
 
+    <!-- Paket Express -->
+    <div class="card">
+      <h2>Paket Express</h2>
+      <p class="price">Rp 400.000</p>
+      <p>Proses 1 hari kerja. Prioritas lebih cepat untuk kebutuhan mendesak.</p>
+      <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Paket+Express" target="_blank">Pesan via WhatsApp</a>
+    </div>
+  </div>
+
+  <footer>
+    © 2025 Unlock IMEI Nfl87 | All Rights Reserved
+  </footer>
+</body>
+</html>
