--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="card">
       <h2>Paket Standard</h2>
       <p class="price">Rp 350.000</p>
-      <p>Estimasi 1-2 hari. Paling cepat 7 Jam .</p>
+      <p>Estimasi 1-2 hari. Paling cepat 7 Jam </p>
       <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Paket+Standard" target="_blank">Pesan via WhatsApp</a>
     </div>
 
@@ -85,7 +85,7 @@
     <div class="card">
       <h2>Paket Express</h2>
       <p class="price">Rp 400.000</p>
-      <p>Estimasi 1-6 jam. Paling cepat 1-5 Jam .</p>
+      <p>Estimasi 1-6 jam. Paling cepat 1-5 Jam </p>
       <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Paket+Express" target="_blank">Pesan via WhatsApp</a>
     </div>
   </div>
