--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background: #1e3d59; /* biru tua */
+      background: #0077b6; /* biru laut */
       color: #fff;
       padding: 25px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
@@ -28,7 +28,7 @@
       gap: 20px;
     }
     .card {
-      background: #ffffff; /* putih bersih */
+      background: #ffffff;
       width: 280px;
       padding: 20px;
       border-radius: 15px;
@@ -41,7 +41,7 @@
       transform: translateY(-8px);
       box-shadow: 0 12px 24px rgba(0,0,0,0.2);
     }
-    .card h2 { color: #1e3d59; }
+    .card h2 { color: #0077b6; }
     .price { font-size: 24px; font-weight: bold; color: #27ae60; }
     .wa-btn {
       background: #25D366;
@@ -60,7 +60,7 @@
     footer {
       margin-top: 40px;
       padding: 20px;
-      background: #1e3d59; /* biru tua sama dengan header */
+      background: #0077b6; /* biru laut sama dengan header */
       color: #fff;
       font-size: 14px;
     }
@@ -68,7 +68,7 @@
 </head>
 <body>
   <header>
-    <h1>📱 Jasa Unlock IMEI Nfl87📱</h1>
+    <h1>📱 Jasa Unlock IMEI Nfl87 📱</h1>
     <p>Solusi cepat & aman untuk iPhone Ex Inter</p>
   </header>
 
@@ -77,7 +77,7 @@
     <div class="card">
       <h2>Paket Standard</h2>
       <p class="price">Rp 350.000</p>
-      <p>Estimasi 1-2 hari. Paling cepat 7 Jam </p>
+      <p>Estimasi 1-2 hari. Paling cepat 7 Jam.</p>
       <a class="wa-btn" href="https://wa.me/6281234567890?text=Halo%2C+saya+mau+pesan+Paket+Standard" target="_blank">Pesan via WhatsApp</a>
     </div>
 
@@ -85,7 +85,7 @@
     <div class="card">
       <h2>Paket Express</h2>
       <p class="price">Rp 400.000</p>
-      <p>Estimasi 1-6 jam. Paling cepat 1-5 Jam </p>
+      <p>Estimasi 1-6 jam. Paling cepat 1-5 Jam.</p>
       <a class="wa-btn" href="https://wa.me/6285245907854?text=Halo%2C+saya+mau+pesan+Paket+Express" target="_blank">Pesan via WhatsApp</a>
     </div>
   </div>
